objects/sharinpix__SharinPix_Search_Affix__mdt.object
<CustomObject>
    <description>Prefixes and suffixes to add to Salesforce IDs when performing Search using the SharinPix Search form.</description>
    <fields>
        <fullName>sharinpix__Affix_Type__c</fullName>
        <description>Whether the label should be prefixed or suffixed to the ID from the report.</description>
        <label>Affix Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prefix</fullName>
                    <default>true</default>
                    <label>Prefix</label>
                </value>
                <value>
                    <fullName>Suffix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sharinpix__Affix_Value__c</fullName>
        <description>The actual affix to be prepended or appended to the object ID.</description>
        <inlineHelpText>The actual affix to be prepended or appended to the object ID.</inlineHelpText>
        <label>Affix Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sharinpix__Checked__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Initial value on SharinPix Search form</label>
        <type>Checkbox</type>
    </fields>
    <label>SharinPix Search Affix</label>
    <pluralLabel>SharinPix Search Affixes</pluralLabel>
</CustomObject>